--- a/poem.rmd
+++ b/poem.rmd
@@ -15,6 +15,11 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+"MY First - but don't suppose," he said,  
+"I'm setting you a riddle -  
+Is - if your Victim be in bed,  
+Don't touch the curtains at his head,  
+But take them in the middle,  
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
