--- a/poem.rmd
+++ b/poem.rmd
@@ -18,6 +18,11 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+A winter garden in an alder swamp,  
+Where conies now come out to sun and romp,  
+As near a paradise as it can be  
+And not melt snow or start a dormant tree.  
+It lifts existence on a plane of snow  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
