--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,7 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+If ever two were one, then surely we.  
+If ever man were loved by wife, then thee.  
+If ever wife was happy in a man,  
+Compare with me, ye women, if you can.  
